# bio_ik

./: .gitignore  CMakeLists.txt  Doxyfile  LICENCE.txt  LICENSE.txt  README.md  bio_ik_kinematics_description.xml  bio_ik_kinematics_plugin_description.xml  package.xml
docs/: README_8md_source.html  annotated.html  classbio__ik_1_1Factory-members.html  classbio__ik_1_1Factory.html  classbio__ik_1_1IKEvolution1_1_1HeuristicErrorTree-members.html  classbio__ik_1_1IKEvolution1_1_1HeuristicErrorTree.html  classbio__ik_1_1ParallelExecutor-members.html  classbio__ik_1_1ParallelExecutor.html  classbio__ik_1_1Problem-members.html  classbio__ik_1_1Problem.html  classbio__ik_1_1RobotFK__Fast-members.html  classbio__ik_1_1RobotFK__Fast.html  classbio__ik_1_1RobotFK__Fast__Base-members.html  classbio__ik_1_1RobotFK__Fast__Base.html  classbio__ik_1_1RobotFK__Fast__Base__coll__graph.map  classbio__ik_1_1RobotFK__Fast__Base__coll__graph.md5  classbio__ik_1_1RobotFK__Fast__Base__inherit__graph.map  classbio__ik_1_1RobotFK__Fast__Base__inherit__graph.md5  classbio__ik_1_1RobotFK__Fast__coll__graph.map  classbio__ik_1_1RobotFK__Fast__coll__graph.md5  classbio__ik_1_1RobotFK__Fast__inherit__graph.map  classbio__ik_1_1RobotFK__Fast__inherit__graph.md5  classbio__ik_1_1RobotFK__Jacobian-members.html  classbio__ik_1_1RobotFK__Jacobian.html  classbio__ik_1_1RobotFK__Jacobian__coll__graph.map  classbio__ik_1_1RobotFK__Jacobian__coll__graph.md5  classbio__ik_1_1RobotFK__Jacobian__inherit__graph.map  classbio__ik_1_1RobotFK__Jacobian__inherit__graph.md5  classbio__ik_1_1RobotFK__MoveIt-members.html  classbio__ik_1_1RobotFK__MoveIt.html  classbio__ik_1_1RobotFK__Mutator-members.html  classbio__ik_1_1RobotFK__Mutator.html  classbio__ik_1_1RobotFK__Mutator__inherit__graph.map  classbio__ik_1_1RobotFK__Mutator__inherit__graph.md5  classbio__ik_1_1RobotJointEvaluator-members.html  classbio__ik_1_1RobotJointEvaluator.html  classbio__ik_1_1RobotJointEvaluator__inherit__graph.map  classbio__ik_1_1RobotJointEvaluator__inherit__graph.md5  classbio__ik_1_1XmlRpcReader-members.html  classbio__ik_1_1XmlRpcReader.html  (+180 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  classes_1.js  classes_4.js  classes_7.js  classes_b.js  pages_0.js  searchdata.js
include/bio_ik/: bio_ik.h  forward_kinematics.h  frame.h  goal.h  goal_types.h  ik_parallel.h  kinematics_plugin.h  problem.h  robot_info.h  utils.h
src/: bak.cpp  forward_kinematics.h  frame.h  goal_types.cpp  ik_base.cpp  ik_base.h  ik_cppoptlib.cpp  ik_cppoptlib.h  ik_evolution_1.cpp  ik_evolution_1.h  ik_evolution_2.cpp  ik_evolution_2.h  ik_evolution_3.cpp  ik_gradient.cpp  ik_gradient.h  ik_neural.cpp  ik_parallel.h  ik_solvers.cpp  ik_test.cpp  ikbio.cpp  kinematics_plugin.cpp  problem.cpp  problem.h  robot_helpers.h  robot_info.h  utils.h
test/: utest.cpp
