<?xml version="1.0"?>
<package>

    <name>bio_ik</name>
    <version>1.0.0</version>
    <description>BioIK for ROS</description>
    <license>BSD</license>

    <author email="0ruppel@informatik.uni-hamburg.de">Philipp Sebastian Ruppel</author>

    <maintainer email="0ruppel@informatik.uni-hamburg.de">Philipp Sebastian Ruppel</maintainer>
    <maintainer email="me@v4hn.de">Michael Goerner</maintainer>


    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>moveit_core</build_depend>
    <run_depend>moveit_core</run_depend>

    <build_depend>pluginlib</build_depend>
    <run_depend>pluginlib</run_depend>

    <build_depend>eigen</build_depend>
    <run_depend>eigen</run_depend>

    <build_depend>moveit_ros_planning</build_depend>
    <run_depend>moveit_ros_planning</run_depend>

    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>

    <build_depend>tf2</build_depend>
    <run_depend>tf2</run_depend>

    <build_depend>tf2_eigen</build_depend>
    <run_depend>tf2_eigen</run_depend>
    <build_depend>tf2_kdl</build_depend>
    <run_depend>tf2_kdl</run_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <run_depend>tf2_geometry_msgs</run_depend>

    <build_depend>eigen_conversions</build_depend>
    <run_depend>eigen_conversions</run_depend>

    <test_depend>rosunit</test_depend>

    <export>
        <moveit_core plugin="${prefix}/bio_ik_kinematics_description.xml"/>
    </export>

</package>
