<?xml version="1.0"?>
<package format="3">

    <name>bio_ik</name>
    <version>1.0.0</version>
    <description>BioIK for ROS</description>
    <license>BSD</license>

    <author email="0ruppel@informatik.uni-hamburg.de">Philipp Sebastian Ruppel</author>

    <maintainer email="0ruppel@informatik.uni-hamburg.de">Philipp Sebastian Ruppel</maintainer>
    <maintainer email="me@v4hn.de">Michael Goerner</maintainer>


    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>moveit_common</build_depend>

    <depend>moveit_core</depend>
    <depend>class_loader</depend>
    <depend>pluginlib</depend>
    <depend>eigen</depend>
    <depend>tf2</depend>
    <depend>tf2_kdl</depend>
    <depend>orocos_kdl</depend>
    <depend>moveit_msgs</depend>

    <exec_depend>urdfdom</exec_depend>
    <exec_depend>python-lxml</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <moveit_core plugin="${prefix}/bio_ik_kinematics_description.xml"/>
    </export>

</package>
