<?xml version="1.0"?>
<package format="3">

    <name>bio_ik</name>
    <version>2.0.0</version>
    <description>BioIK for ROS 2</description>
    <license>BSD</license>

    <author email="0ruppel@informatik.uni-hamburg.de">Philipp Sebastian Ruppel</author>

    <maintainer email="0ruppel@informatik.uni-hamburg.de">Philipp Sebastian Ruppel</maintainer>
    <maintainer email="me@v4hn.de">Michael Goerner</maintainer>


    <buildtool_depend>ament_cmake_ros</buildtool_depend>

    <depend>moveit_core</depend>
    <depend>pluginlib</depend>
    <depend>eigen</depend>
    <depend>moveit_ros_planning</depend>
    <depend>rclcpp</depend>
    <depend>tf2</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_kdl</depend>
    <depend>tf2_geometry_msgs</depend>

    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <moveit_core plugin="${prefix}/bio_ik_kinematics_description.xml"/>
    </export>

</package>
